--- a/src/components/NavBar/index.scss
+++ b/src/components/NavBar/index.scss
@@ -1,8 +1,16 @@
 .navbar{
+    position: fixed;
+    top: 0;
+    width: 100%;
     background-color: #0f172a;
     padding: 12px 3%;
+    z-index: 5;
 
     .page-title{
         color: #fff;
+        text-decoration: none;
+        font-size: 2em;
+        font-weight: 500;
+        cursor: pointer;
     }
 }
