--- a/src/components/NavBar/index.scss
+++ b/src/components/NavBar/index.scss
@@ -6,11 +6,30 @@
     padding: 12px 3%;
     z-index: 5;
 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     .page-title{
         color: #fff;
         text-decoration: none;
         font-size: 2em;
         font-weight: 500;
         cursor: pointer;
+        transition: color .3s ease-in;
+
+        &:hover{
+            color:#14ecf4;
+        }
+    }
+
+    .all-movies{
+        text-decoration: none;
+        color: #fff;
+        transition: color .3s ease-in;
+
+        &:hover{
+            color:#14ecf4;
+        }
     }
 }
