--- a/src/components/Pagination/index.scss
+++ b/src/components/Pagination/index.scss
@@ -14,6 +14,10 @@
         &:hover {
             color: #14ecf4;
         }
+
+        &.selected{
+            color: #14ecf4;
+        }
     }
 
 
